--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
 
     <!-- Favicon and App Icons -->
-    <link rel="icon" type="image/svg+xml" href="/a_OCR.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/a_OCR.svg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/a_OCR.svg" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/a_OCR.svg" />
+    <link rel="icon" type="image/png" href="/Fabicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/Fabicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/Fabicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/Fabicon.png" />
     <link rel="mask-icon" href="/a_OCR.svg" color="#000000" />
 
     <!-- Viewport and Mobile Optimization -->
